fix: fix form fields outline cropped at the left

--- a/apps/demo/src/assets/css/demo.css
+++ b/apps/demo/src/assets/css/demo.css
@@ -117,7 +117,6 @@
   .demo > .demo-main {
     height: 100%;
     overflow-y: auto;
-    padding-right: 2rem;
-    padding-top: 2rem;
+    padding: 2rem;
   }
 }
